# discord-rpc-lastfm

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  justfile
.github/workflows/: release.yml  rust-clippy.yml
.trunk/: trunk.yaml
src/: config.rs  discord_rpc.rs  main.rs  request.rs  requests.rs  structs.rs
src/discord_rpc/: config.rs  gui.rs  log.rs  requests.rs  status_screen.rs
src/discord_rpc/gui/: tray.rs
