[package]
name = "discord-rpc-lastfm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.3"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.2"
serde = { version = "1.0.189", features = ["derive"] }
tracing = "0.1.39"
dotenv = "0.15.0"
url = "2.4.1"
tracing-subscriber = "0.3.17"
futures = "0.3.28"
inquire = "0.6.2"
