[package]
name = "discord-rpc-lastfm"
version = "0.1.2"
edition = "2021"
build = "./build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
discord-rich-presence = "0.2.3"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.34.0", features = ["full"] }
toml = "0.8.8"
serde = { version = "1.0.192", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
dotenvy = "0.15.7"
url = "2.4.1"
futures = "0.3.29"
inquire = "0.6.2"
crossterm = "0.27.0"
colored = "2.0.4"
home = "0.5.5"
terminal_size = "0.3.0"

[build-dependencies]
winresource = "0.1.17"
build-target = "0.4.0"
